fixed overlap

--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -34,17 +34,6 @@
     line-height: 1.5;
 }
 
-.message-icon {
-    user-select: none;
-    border-radius: 50%;
-    height: 3rem;
-    width: 3rem;
-    padding-top: 0.6rem;
-    box-shadow: $outer-shadow;
-    text-align: center;
-    font-size:3vw;
-}
-
 .chat{
     height: 80vh !important;
     bottom: 0;
